--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "author": "William Harrell",
   "license": "ISC",
   "dependencies": {
-    "@slack/bolt": "^1.2.0"
+    "@slack/bolt": "^1.2.0",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
